# rhubarb

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
bootloader/src/: main.rs
crates/bit-utils/src/: bit_utils.rs
crates/boot-info/src/: boot_info.rs
crates/framebuffer/: Cargo.toml
crates/framebuffer/src/: framebuffer.rs
crates/fs/: Cargo.toml
crates/fs/src/: fs.rs
crates/heap/: Cargo.toml
crates/heap/src/: alloc_shim.rs  heap.rs  llff.rs
crates/input/src/: input.rs
crates/io/: Cargo.toml
crates/io/src/: io.rs
crates/log/src/: log.rs
crates/math/: Cargo.toml
crates/math/src/: area.rs  math.rs  point.rs  size.rs
crates/memory-types/src/: memory_types.rs  paging.rs  physical_memory.rs  virtual_memory.rs
crates/panic/: Cargo.toml
crates/panic/src/: panic.rs
crates/process/src/: process.rs
docs/: ARCHITECTURE.md  DESIGN.md  memory_management.md
drivers/: README.md
drivers/ata/: Cargo.toml
drivers/ata/src/: ata.rs
drivers/pci/src/: pci.rs
drivers/uart-16550/: Cargo.toml
drivers/uart-16550/src/: uart_16550.rs
drivers/virtio/: Cargo.toml
drivers/virtio/src/: virtio.rs  virtio_gpu.rs  virtio_input.rs
example/: Cargo.toml
example/apps/input-driver/: Cargo.toml
example/apps/input-driver/src/: input_driver.rs
example/src/: example.rs
kernel/: Cargo.toml  kernel_x86_64.ld
kernel/src/: acpi.rs  apic.rs  ata.rs  gdt.rs  idt.rs  input.rs  loader.rs  main.rs  memory.rs  scheduler.rs  serial.rs  vfat.rs  window_manager.rs
shell/: Cargo.toml
shell/src/: shell.rs
tools/runner/src/: main.rs
