[package]
name = "example"
version.workspace = true
edition.workspace = true

[lib]
path = "src/example.rs"

[dependencies]
framebuffer = { path = "../crates/framebuffer" }
heap = { path = "../crates/heap" }
input = { path = "../crates/input" }
math = { path = "../crates/math" }
pit = { path = "../drivers/pit" }
process = { path = "../crates/process" }
time = { path = "../crates/time" }
