[package]
name = "example"
version.workspace = true
edition.workspace = true

[lib]
path = "src/example.rs"

[dependencies]
framebuffer = { path = "../crates/framebuffer" }
heap = { path = "../crates/heap" }
input = { path = "../crates/input" }
log = { path = "../crates/log" }
math = { path = "../crates/math" }
pit = { path = "../drivers/pit" }
process = { path = "../crates/process" }
spin-mutex = { path = "../crates/spin-mutex" }
time = { path = "../crates/time" }
uart-16550 = { path = "../drivers/uart-16550" }
