[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
acpi = "6.1.0"
bit-utils = { path = "../crates/bit-utils" }
boot-info = { path = "../crates/boot-info" }
elf = { path = "../crates/elf" }
framebuffer = { path = "../crates/framebuffer" }
fs = { path = "../crates/fs" }
hashbrown = "0.16.1"
input = { path = "../crates/input" }
io = { path = "../crates/io" }
linked_list_allocator = "0.9.0"
log = { path = "../crates/log" }
math = { path = "../crates/math" }
memory-types = { path = "../crates/memory-types" }
pci = { path = "../drivers/pci" }
pit = { path = "../drivers/pit" }
rtc = { path = "../drivers/rtc" }
rustc-demangle = "0.1.27"
rustc-hash = { version = "2.1.2", default-features = false }
spin-mutex = { path = "../crates/spin-mutex" }
time = { path = "../crates/time" }
uart-16550 = { path = "../drivers/uart-16550" }
virtio = { path = "../drivers/virtio" }
x2apic = "0.5.0"
x86_64 = "0.15.4"
x86-port = { path = "../drivers/x86-port" }
