[package]
name = "shell"
version.workspace = true
edition.workspace = true

[lib]
path = "src/shell.rs"

[dependencies]
framebuffer = { path = "../crates/framebuffer" }
hashbrown = { version = "0.17", default-features = false, features = ["nightly"] }
heap = { path = "../crates/heap" }
input = { path = "../crates/input" }
log = { path = "../crates/log" }
math = { path = "../crates/math" }
pit = { path = "../drivers/pit" }
process = { path = "../crates/process" }
rustc-hash = { version = "2", default-features = false }
spin-mutex = { path = "../crates/spin-mutex" }
time = { path = "../crates/time" }
uart-16550 = { path = "../drivers/uart-16550" }
