[package]
name = "input-driver"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/input_driver.rs"

[dependencies]
heap = { path = "../../../crates/heap" }
input = { path = "../../../crates/input" }
pci = { path = "../../../drivers/pci" }
process = { path = "../../../crates/process" }
virtio = { path = "../../../drivers/virtio" }
